--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<!-- Add a copyright notice -->
 	<title>An Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
